k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: e-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: project-notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: e-commerce
spec:
  selector:
    app: notification-service
  ports:
    - port: 8080
      targetPort: 8080
      name: http
