k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: e-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: project-order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8300
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: e-commerce
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 8300
      name: http
