k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: e-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: project-user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
            - containerPort: 9003
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: e-commerce
spec:
  selector:
    app: user-service
  ports:
    - port: 8000
      targetPort: 8000
      name: http
    - port: 9003
      targetPort: 9003
      name: grpc
